--- a/views/pages/settings.jet.html
+++ b/views/pages/settings.jet.html
@@ -80,7 +80,7 @@
     <label for="novels">Novels</label>
     <div class="tabs-content">
       <h2>Font family</h2>
-      <form action="/settings/novelFontType?r=/settings" method="post">
+      <form action="/settings/novelFontType" method="post">
         <input id="font-type-mincho" type="radio" name="font-type" value="mincho" />
         <label for="font-type-mincho">Mincho</label>
         <br />
