--- a/views/pages/_layout.jet.html
+++ b/views/pages/_layout.jet.html
@@ -16,6 +16,8 @@
   <script src="/js/htmx@1.9.10.min.js"
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script>
 
+  <!-- <script src="/js/illust-preview.js" defer></script> -->
+
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:url" content="{{ PageURL }}" />
   <meta property="og:site_name" content="PixivFE" />
