--- a/views/css/style.css
+++ b/views/css/style.css
@@ -199,7 +199,8 @@ input[type=radio] {
 
 input[type=checkbox] + label,
 input[type=radio] + label {
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
   font-weight: normal;
   position: relative;
   top: 1px;
@@ -352,6 +353,10 @@ input[type=submit][hidden] {
   width: 100%;
   border-top: 1px solid white;
   padding: 0.5rem 1rem 1rem;
+  display: none;
+}
+
+#site-config {
   display: none;
 }
 
@@ -577,6 +582,28 @@ nav .sidebar-item img {
   height: 184px;
   background: rgb(19, 21, 22);
   background: linear-gradient(0deg, rgba(10, 10, 10, 0.5) 0%, rgba(19, 21, 22, 0) 80%, rgba(34, 33, 33, 0) 100%);
+}
+.artwork-container .artwork-small .artwork-image,
+.artwork-container-scroll .artwork-small .artwork-image {
+  position: relative;
+}
+.artwork-container .artwork-small .artwork-image .overlay-cover,
+.artwork-container-scroll .artwork-small .artwork-image .overlay-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.artwork-container .artwork-small .artwork-image .overlay-button,
+.artwork-container-scroll .artwork-small .artwork-image .overlay-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0 5px;
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 .artwork-container .artwork-small .artwork-title,
 .artwork-container-scroll .artwork-small .artwork-title {
