--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -239,7 +239,8 @@ input[type="radio"] {
 
 input[type="checkbox"]+label,
 input[type="radio"]+label {
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
   font-weight: normal;
   position: relative;
   top: 1px;
@@ -403,6 +404,10 @@ input[type="submit"][hidden] {
     padding: .5rem 1rem 1rem;
     display: none;
   }
+}
+
+#site-config {
+  display: none;
 }
 
 // https://stackoverflow.com/questions/63787241/css-how-to-create-an-infinitely-moving-repeating-linear-gradient/63787567#63787567
@@ -683,6 +688,28 @@ nav {
       height: $small-artwork-width;
       background: rgb(19,21,22);
       background: linear-gradient(0deg, rgba(10,10,10,0.5) 0%, rgba(19,21,22,0) 80%, rgba(34,33,33,0) 100%);
+    }
+
+    .artwork-image {
+      position: relative;
+
+      .overlay-cover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+      }
+
+      .overlay-button {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 0 5px;
+        background-color: rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+      }
     }
 
     .artwork-title {
