--- a/views/pages/discovery.jet.html
+++ b/views/pages/discovery.jet.html
@@ -7,10 +7,9 @@
   </div>
   <div class="switcher">
     <div class="switch-title">Filter</div>
-    {{ URL := URLC(Queries, "mode") }}
-    <a href='{{URL}}all' class="switch-button">All</a>
-    <a href='{{URL}}safe' class="switch-button">Safe</a>
-    <a href='{{URL}}r18' class="switch-button">R-18</a>
+    <a href='{{replaceQuery(Queries, "mode", "all")}}' class="switch-button">All</a>
+    <a href='{{replaceQuery(Queries, "mode", "safe")}}' class="switch-button">Safe</a>
+    <a href='{{replaceQuery(Queries, "mode", "r18")}}' class="switch-button">R-18</a>
   </div>
   <div class="artwork-container">
     {{ include "components/small-tn" Artworks }}
