--- a/views/pages/tag.jet.html
+++ b/views/pages/tag.jet.html
@@ -35,35 +35,35 @@
   {{ SearchMode := isset(Queries.smode) ? Queries.smode : "" }}
   <div class="switcher">
     <div class="switch-title">Category</div>
-    {{ URL := URLC(QueriesC, "category") }}
+    {{ URL := unfinishedQuery(QueriesC, "category") }}
     {{ path := slice("artworks", "illustrations", "manga")}}
     {{ name := slice("Artworks", "Illustrations", "Manga")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Category) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Order</div>
-    {{ URL := URLC(QueriesC, "order") }}
+    {{ URL := unfinishedQuery(QueriesC, "order") }}
     {{ path := slice("date_d", "date")}}
     {{ name := slice("Newest", "Oldest")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Order) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Filter</div>
-    {{ URL := URLC(QueriesC, "mode") }}
+    {{ URL := unfinishedQuery(QueriesC, "mode") }}
     {{ path := slice("all", "safe", "r18")}}
     {{ name := slice("All", "Safe", "R-18")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Mode) }}
   </div>
     <div class="switcher">
       <div class="switch-title">Ratio</div>
-    {{ URL := URLC(QueriesC, "ratio") }}
+    {{ URL := unfinishedQuery(QueriesC, "ratio") }}
     {{ path := slice("", "-0.5", "0", "0.5")}}
     {{ name := slice("All", "Portrait", "Square", "Landscape")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Ratio) }}
     </div>
     <div class="switcher">
       <div class="switch-title">Search mode</div>
-      {{ URL := URLC(QueriesC, "smode") }}
+      {{ URL := unfinishedQuery(QueriesC, "smode") }}
       {{ path := slice("", "s_tag_full", "s_tag", "s_tc")}}
       {{ name := slice("None", "Exact (tags)", "Partial (tags)", "Title/Caption")}}
       {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=SearchMode) }}
@@ -72,7 +72,7 @@
     <summary>
     <h2>Advanced settings</h2>
     </summary>
-      {{ URL := URLC(QueriesC, "") }}
+      {{ URL := unfinishedQuery(QueriesC, "") }}
       <form action="{{ URL }}&name={{ QueriesC.Hash.Name }}" method="post">
         <label for="wlt">Minimum image width</label>
         <input type="text" name="wlt" value="{{ QueriesC.Hash.Wlt }}" />
@@ -110,7 +110,7 @@
   </div>
 
   <div class="pagination">
-    {{ url := URLC(QueriesC, "page") }}
+    {{ url := unfinishedQuery(QueriesC, "page") }}
     <small>Page {{ Page }}</small>
     <br />
     {{ raw: createPaginator(url, "#checkpoint", Page, -1) }}
