Realign the site logo

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -405,6 +405,7 @@ nav .sidebar-container {
 }
 nav .navbar-brand {
   display: inline-flex;
+  align-items: center;
   gap: 10px;
 }
 nav .navbar-brand span {
