--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -1339,7 +1339,6 @@ $font-fallback-sans: YuGothic,
 }
 
 .user {
-
   transform: translateY(-8rem);
 
   img {
@@ -1378,7 +1377,7 @@ $font-fallback-sans: YuGothic,
   }
 }
 
-.user-tags {
+.tag-list {
   display: flex;
   flex-wrap: wrap;
   row-gap: 8px;
@@ -1391,6 +1390,51 @@ $font-fallback-sans: YuGothic,
     &:hover {
       text-decoration: underline;
     }
+  }
+}
+
+.vision-container {
+  display: grid;
+  width: 100%;
+  gap: 15px;
+  grid-template-columns: 1fr 1fr;
+
+  .vision-preview {
+    background: $bg-secondary;
+    padding: 10px;
+    display: flex;
+    flex-flow: column wrap;
+  }
+
+  .vision-thumbnail {
+    img {
+      width: 100%;
+    }
+  }
+
+
+
+  .vision-metadata {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+
+    .vision-title {
+      color: $fg;
+      margin: 0.5rem 0;
+    }
+
+
+    .vision-metadata-other {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  .tag-list {
+    align-items: center;
+    margin: 0;
   }
 }
 
