rename views/ to assets/ rename folders within

--- a/assets/layout/_layout.jet.html
+++ b/assets/layout/_layout.jet.html
@@ -49,38 +49,38 @@
         <span class="sidebar-container">
           <input type="checkbox" class="sidebar-toggler" id="sidebar-toggler" />
           <label for="sidebar-toggler" class="sidebar-label">
-            <img src="/assets/menu-thin.png" alt="Menu" width="30" height="30" />
+            <img src="/img/menu-thin.png" alt="Menu" width="30" height="30" />
           </label>
           <div class="sidebar">
             <ul class="sidebar-list">
               <a class="sidebar-item" href="/discovery">
-                <img src="/assets/compass.png" alt="compass" />Discovery</a>
+                <img src="/img/compass.png" alt="compass" />Discovery</a>
               <a class="sidebar-item" href="/ranking">
-                <img src="/assets/crown.png" alt="crown" />Ranking</a>
+                <img src="/img/crown.png" alt="crown" />Ranking</a>
               <a class="sidebar-item" href="/rankingCalendar">
-                <img src="/assets/calendar.png" alt="calendar" />Ranking history</a>
+                <img src="/img/calendar.png" alt="calendar" />Ranking history</a>
               <a class="sidebar-item" href="/newest">
-                <img src="/assets/sparkling.png" alt="sparkling" />Newest</a>
+                <img src="/img/sparkling.png" alt="sparkling" />Newest</a>
               <br />
               <a class="sidebar-item" href="/self/followingWorks">
-                <img src="/assets/users.png" alt="users" />Latest by followed</a>
+                <img src="/img/users.png" alt="users" />Latest by followed</a>
               <a class="sidebar-item" href="/self/bookmarks">
-                <img src="/assets/heart.png" alt="heart" />Your bookmarks</a>
+                <img src="/img/heart.png" alt="heart" />Your bookmarks</a>
               <a class="sidebar-item" href="/self">
-                <img src="/assets/user.png" alt="user" />Your profile</a>
+                <img src="/img/user.png" alt="user" />Your profile</a>
               <br />
               <a class="sidebar-item" href="/settings">
-                <img src="/assets/settings.png" alt="settings" />Settings</a>
+                <img src="/img/settings.png" alt="settings" />Settings</a>
               <a class="sidebar-item" href="/about">
-                <img src="/assets/about.svg" alt="about" />About</a>
+                <img src="/img/about.svg" alt="about" />About</a>
               <br />
               <a class="sidebar-item" href="https://codeberg.org/vnpower/pixivfe">
-                <img src="/assets/globe.png" alt="globe" />Source code</a>
+                <img src="/img/globe.png" alt="globe" />Source code</a>
             </ul>
           </div>
         </span>
         <a class="navbar-brand" href="/">
-          <img src="/assets/favicon.ico" alt="PixivFE icon" />
+          <img src="/img/favicon.ico" alt="PixivFE icon" />
           <span>PixivFE</span>
         </a>
       </span>
@@ -88,13 +88,13 @@
       <span class="navbar-entry">
         <form action="/tags" method="post" class="search-form" autocomplete="off">
           <input type="text" name="name" required="true" class="search-form-text" placeholder="⌕ Search artworks..." />
-          <label class="navbar-entry"><img src="/assets/search.svg" alt="Search" /><input type="submit"
+          <label class="navbar-entry"><img src="/img/search.svg" alt="Search" /><input type="submit"
               hidden /></label>
         </form>
       </span>
 
       <a class="navbar-entry" href="/settings">
-        <img src="/assets/cog.svg" alt="Settings" />
+        <img src="/img/cog.svg" alt="Settings" />
       </a>
     </div>
     <div class="navbar-shadow"></div>
