--- a/assets/layout/components/artwork.jet.html
+++ b/assets/layout/components/artwork.jet.html
@@ -37,20 +37,20 @@
   <div class="artwork-actions">
     {{ if isset(.BookmarkData) && LoggedIn }}
     <a href="/self/deleteBookmark/{{ .BookmarkID }}?r={{ OriginalURL }}">
-      <img src="/assets/heart-red.png" alt="Bookmarked" />
+      <img src="/img/heart-red.png" alt="Bookmarked" />
     </a>
     {{ else }}
     <a href="/self/addBookmark/{{ .ID }}?r={{ OriginalURL }}">
-      <img src="/assets/heart-outline.png" alt="Bookmark" />
+      <img src="/img/heart-outline.png" alt="Bookmark" />
     </a>
     {{ end }}
 
     {{ if .Liked && LoggedIn}}
-    <img src="/assets/like-blue.png" alt="Liked" />
+    <img src="/img/like-blue.png" alt="Liked" />
 
     {{ else }}
     <a href="/self/like/{{ .ID }}?r={{ OriginalURL }}">
-      <img src="/assets/like-outline.png" alt="Like" />
+      <img src="/img/like-outline.png" alt="Like" />
     </a>
     {{ end }}
   </div>
@@ -62,19 +62,19 @@
 </div>
 <div class="illust-tags">
   <span class="illust-tag-attr">
-    <img src="/assets/eye.png" alt="Views" />
+    <img src="/img/eye.png" alt="Views" />
     {{ .Views }}
   </span>
   <span class="illust-tag-attr">
-    <img src="/assets/heart-solid.png" alt="Bookmarks" />
+    <img src="/img/heart-solid.png" alt="Bookmarks" />
     {{ .Bookmarks }}
   </span>
   <span class="illust-tag-attr">
-    <img src="/assets/like.png" alt="Likes" />
+    <img src="/img/like.png" alt="Likes" />
     {{ .Likes }}
   </span>
   <span class="illust-tag-attr">
-    <img src="/assets/calendar.png" alt="Date" />
+    <img src="/img/calendar.png" alt="Date" />
     {{ parseTime: .Date }}
   </span>
 </div>
