--- a/assets/layout/user.jet.html
+++ b/assets/layout/user.jet.html
@@ -18,11 +18,11 @@
     <small> {{ User.Following }} Following | {{ User.MyPixiv }} MyPixiv </small>
     <div class="user-social">
       {{ if User.Webpage }}
-      <span><a href="{{ User.Webpage }}"><img src="/assets/globe.png" alt="Webpage" /></a></span>
+      <span><a href="{{ User.Webpage }}"><img src="/img/globe.png" alt="Webpage" /></a></span>
       {{ end }} {{ range index, item := User.Social }}
       <span>
         <a href="{{ item.url }}">
-          <img src="/assets/{{ index }}.svg" alt="{{ index }}" />
+          <img src="/img/{{ index }}.svg" alt="{{ index }}" />
         </a>
       </span>
       {{ end }}
