--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -889,6 +889,7 @@ nav {
     border-radius: 50px;
     object-fit: cover;
     object-position: center top;
+    aspect-ratio: 1/1;
   }
 
   .attr-wrap {
