--- a/assets/layout/pixivision/article.jet.html
+++ b/assets/layout/pixivision/article.jet.html
@@ -1,12 +1,26 @@
-<div class="container vision-article">
+<div class="container illust">
 	<h2>{{Article.Title}}</h2>
 	{{ range _, desc := Article.Description }}
 	<p>{{desc}}</p>
 	{{ end }}
 
 	{{ range _, item := Article.Items }}
-	<div class="vision-article-item">
-		{{item.Title}}
+	<div class="illust-images">
+
+		<div class="illust-attr">
+			<div class="illust-author-attr">
+				<a href="/users/{{ item.UserID }}"><img src="{{ item.Avatar }}"
+						alt="{{ item.Username }}" class="illust-avatar" />
+				</a>
+				<div class="attr-wrap">
+					<div class="illust-title"><a href="/artworks/{{ item.ID }}">{{ item.Title }}</a>
+					</div>
+					<div class="illust-author">
+						<a href="/users/{{ item.UserID }}">{{ item.Username }}</a>
+					</div>
+				</div>
+			</div>
+		</div>
 		<img src="{{item.Image}}" alt="{{item.Title}}" />
 	</div>
 	{{ end }}
