--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -733,9 +733,9 @@ nav {
 
     .artwork-additional {
       position: absolute;
-      top: 4px;
-      left: 4px;
-      right: 4px;
+      top: 0;
+      left: 0;
+      right: 0;
       box-sizing: border-box;
       display: flex;
       align-items: flex-start;
