--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,9 +627,9 @@ nav .sidebar-item img {
 .artwork-container .artwork .artwork-additional,
 .artwork-container-scroll .artwork .artwork-additional {
   position: absolute;
-  top: 4px;
-  left: 4px;
-  right: 4px;
+  top: 0;
+  left: 0;
+  right: 0;
   box-sizing: border-box;
   display: flex;
   align-items: flex-start;
