Update the log in section

--- a/assets/layout/settings.jet.html
+++ b/assets/layout/settings.jet.html
@@ -22,12 +22,11 @@
         <a href="https://pixivfe.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
       </p>
       <p>
-        Keep in mind that logins will expire whenever the server is updated, so you
-        may need to log in again if the server has been restarted recently.
+        Cookies will be saved on your browser, and will expire after a fixed period of time.
       </p>
       <form action="/settings/token" method="post">
         <input type="text" name="token" autocomplete="off" />
-        <input type="submit" value="Remember account cookie (until next server restart)" />
+        <input type="submit" value="Log in" />
       </form>
       <hr />
       <h2>Logout</h2>
